# ir-turtle

./: .gitignore  README.md
catkin_ws/: run_ir_turtle.sh
catkin_ws/src/ir_turtle/: CMakeLists.txt  package.xml
catkin_ws/src/ir_turtle/launch/: irturtle.launch
catkin_ws/src/ir_turtle/src/: ir_publisher.ino  pubsub_to_turtlesim_and_arduino.cpp
